Switch to a logger, add nineslice preview, add ability to copy images from texture previews